# eed_docker_python_uv

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/rulesets/branches/: main.json
.github/rulesets/tags/: semantic versioning.json
.github/workflows/: publish_docker.yml
tests/: test_hello_world.py
